# sb-em

./: .gitignore  README.md  pyproject.toml
dif_equ_dyn_sys/3/: program.py  templ_params.yaml
